Sorted out issue with overflow-x on mobile devices and responisveness

--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -1,3 +1,12 @@
+.overflow-container {
+  width: 100vw;
+  overflow-x: hidden;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: min-content;
+}
+
 // Padding
 .py {
   &-1 {
@@ -31,10 +40,11 @@
 }
 
 .container {
-  width: 100%;
-  max-width: $website-width;
+  width: calc($website-width - 1.5rem);
+  // width: 100%;
+  // max-width: $website-width;
   padding: 0 1.5rem;
-  margin: auto;
+  // margin: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -117,7 +127,6 @@ input[class^='btn-']:hover {
     padding: 2rem;
     margin-top: -1px;
     line-height: 0px;
-    overflow-x: hidden;
     background-color: rgba(255, 215, 102, 0.7);
     color: rgba(0, 0, 0, 0.7);
     text-align: center;
